# MMACord_Bot

./: .gitignore  README.md
MMACord_Bot/: .env  Cargo.toml
MMACord_Bot/src/: main.rs
MMACord_Bot/src/commands/: decision.rs  meta.rs  mod.rs
