[package]
name = "MMACord_Bot"
version = "0.1.0"
authors = ["Danny <danny@erebus.cymru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
kankyo = "0.2"
log = "0.4"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
features = [
  "builder",
  "cache",
  "framework",
  "model",
  "standard_framework", 
  "rustls_backend",
  "utils",
]
path = "../../"