[package]
name = "MMACord_Bot"
version = "0.1.0"
authors = ["Danny <danny@erebus.cymru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
kankyo = "0.2"
log = "0.4"
select = "0.5.0"
reqwest = "0.10.7"
serenity = { version = "0.8.9" }